added orders and updated docs
