# table-service/src/router/tableRouter.js
@@ -1,14 +1,17 @@
 import express from 'express';
-import { getTables, createTables, installCustomers } from '../controllers/TableController';
+import { getTables, createTables, installCustomers, updateCurrentBill } from '../controllers/TableController';
 import { getSeatingPlanByShiftId, createSeatingPlan, updateSeatingPlan } from '../controllers/SeatingPlanController';
+import { createOrder } from '../controllers/OrderController';
 
 const router = express.Router();
 
-router.get('/tables', getTables);
-router.post('/tables', createTables);
-router.put('/tables', installCustomers);
+router.get('/table', getTables);
+router.post('/table', createTables);
+router.put('/table', installCustomers);
 router.get('/seating-plan/:shift_id', getSeatingPlanByShiftId);
 router.post('/seating-plan', createSeatingPlan);
 router.put('/seating-plan/:shift_id', updateSeatingPlan);
+router.post('/order', createOrder);
+router.put('/bill', updateCurrentBill);
 
 export { router as tableRouter };
